# SkillStore

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  vercel.json  wait-for-deploy.sh
.claude-plugin/: marketplace.json
backend/lambdas/: Makefile
backend/lambdas/esm-live-add-context/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-add-google-auth/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-add-item-count/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-add-skill-content/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-add-skill-metadata/: lambda_function.py
backend/lambdas/esm-live-bulk-import-skills/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-copy-user-skill/: lambda_function.py  update.sh
backend/lambdas/esm-live-delete-context/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-delete-document/: lambda_function.py  update.sh
backend/lambdas/esm-live-delete-skill/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-delete-skill-metadata/: lambda_function.py
backend/lambdas/esm-live-delete-user-skill/: lambda_function.py  update.sh
backend/lambdas/esm-live-export-skills/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-extract-docx-text/: Dockerfile  lambda_function.py  update.sh
backend/lambdas/esm-live-extract-image-text/: Dockerfile  lambda_function.py  update.sh
backend/lambdas/esm-live-extract-pdf-text/: Dockerfile  lambda_function.py  update.sh
backend/lambdas/esm-live-get-context/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-get-document/: lambda_function.py  update.sh
backend/lambdas/esm-live-get-google-auth/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-get-item-count/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-get-skill-content/: README.md  lambda_function.py  update.sh
backend/lambdas/esm-live-get-skill-metadata/: lambda_function.py
backend/libs/skillstore-base/: Makefile  README.md  pyproject.toml
backend/libs/skillstore-base/skillstore_base/: __init__.py  core_utils.py  google_sub.py  lambda_utils.py  s3_path_utils.py  skill_catalog.py
backend/libs/skillstore-lambda-tests/: Makefile  README.md  pyproject.toml
backend/libs/skillstore-lambda-tests/skillstore_lambda_tests/fixtures/: skills.py
backend/libs/skillstore-lambda-tests/skillstore_lambda_tests/tests/: conftest.py  test_screen_skills.py
backend/libs/skillstore-smoke/: .env.test  Makefile  README.md  auth-state.json  pyproject.toml  setup_auth.py
backend/libs/skillstore-smoke-back/: Makefile  README.md  pyproject.toml
backend/libs/skillstore-smoke-back/skillstore_smoke_back/: conftest.py
backend/libs/skillstore-smoke-back/skillstore_smoke_back/fixtures/: skills.py
backend/libs/skillstore-smoke-back/skillstore_smoke_back/tests/: conftest.py  test_screen_skills.py  test_screening_pipeline.py
backend/libs/skillstore-smoke/skillstore_smoke/: helpers.py  runner.py  test_catalog_excludes_smoke.py  test_category_page.py  test_clap_lifecycle.py  test_context_lifecycle.py  test_document_upload.py  test_document_upload_lifecycle.py  test_download_lifecycle.py  test_homepage.py  test_how_it_works.py  test_newsletter_breadcrumb.py  test_newsletter_catalog_browse.py  test_newsletter_category_click.py  test_newsletter_content_quality.py  test_newsletter_direct.py  test_newsletter_homepage_nav.py  test_newsletter_install_panel.py  test_newsletter_refinery_sidebar.py  test_newsletter_search.py  test_newsletter_sidebar_meta.py  test_newsletter_tags.py  test_newsletter_verification.py  test_pricing.py  test_refine_skill.py  test_search.py  test_skill_detail.py  test_skill_detail_direct.py  test_skill_metadata_lifecycle.py  test_skills_catalog.py  test_user_skill_lifecycle.py  test_verification_level.py
backend/libs/skillstore-smoke/tests/: smoke_test.py
backend/libs/skillstore-zenv/: pyproject.toml
backend/scripts/: full-automation.sh
backend/state-machines/: deploy-esm-live-screen-skills.sh  deploy-screening-pipeline.sh  esm-live-screen-skills.json  screening-pipeline.json
backend/tests/: conftest.py  pyproject.toml
backend/tests/lambdas/: test_add_google_auth.py  test_add_item_count.py  test_context_pipeline_e2e.py  test_document_api.py  test_extract_docx_text.py  test_extract_image_text.py  test_extract_pdf_text.py  test_extract_text_utility.py  test_get_google_auth.py  test_get_item_count.py  test_pdf_pipeline_e2e.py  test_upload_docx_pipeline.py  test_upload_image_pipeline.py  test_upload_pdf_pipeline.py
docs/: issue-migration-map.md
skillstore-smoke/: Makefile  pyproject.toml  smoke_test.py
skillstore-smoke/tests/: smoke_test.py
skillstore-smoke/tests/fixtures/: test-doc.txt
tests/: smoke_test.py
v2/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
v2/src/: auth.ts  middleware.ts
v2/supabase/: schema.sql
web/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/src/: auth.ts
(+249 files in other folders)
