[tool.poetry]
name = "skillstore-tests"
version = "0.1.0"
description = "Integration tests for SkillStore Lambda functions"
authors = ["Craig Trim <ctrim@maryville.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.5,<4.0"
boto3 = "^1.34"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-timeout = "^2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["lambdas"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 30
