[project]
name = "skillstore_base"
version = "0.2.0"
description = "Core utilities for SkillStore Lambda functions"
readme = "README.md"
license = "LicenseRef-Proprietary"
authors = [
    { name = "Craig Trim", email = "ctrim@maryville.edu" }
]
maintainers = [
    { name = "Craig Trim", email = "ctrim@maryville.edu" }
]
keywords = [
    "skillstore",
    "lambda",
    "S3",
    "skill catalog",
    "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.15",
]

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.build]
generate-setup-file = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
