[tool.poetry]
name = "skillstore-lambda-tests"
version = "0.1.0"
description = "Integration tests for SkillStore Lambda functions and Step Function pipelines"
authors = ["Craig Trim <ctrim@maryville.edu>"]
readme = "README.md"
packages = [{include = "skillstore_lambda_tests"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
boto3 = "^1.34"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-timeout = "^2.3"
ruff = "^0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["skillstore_lambda_tests/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -s"
timeout = 120

[tool.ruff]
line-length = 120
